# prism

./: .clangd  .gitignore  CMakeLists.txt
src/prism/: camera.h  color.h  film.cpp  film.h  interaction.h  main.cpp  types.h
src/prism/math/: ray.h  vec.h
src/prism/shapes/: sphere.h
